- fix sonar